# price_scraper

./: .gitignore  README.MD  main.py  pyproject.toml
api/v1/: __init__.py
api/v1/endpoints/: __init__.py  product_api.py
dash_pages/: __init__.py  price_history.py
database/: __init__.py  base.py  client.py
product/: __init__.py  product_class.py
