[tool.poetry]
name = "price_scraper"
version = "0.1.0"
description = ""
authors = ["AlinaBuchi <alina_florina_buchi@yahoo.com>"]
readme = "README.md"
packages = [{include = "price_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.1"
pymongo = "^4.3.3"
undetected-chromedriver = "^3.4.7"
pydantic = "^1.10.7"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
dash = "^2.10.0"
plotly = "^5.14.1"
dash-bootstrap-components = "^1.4.1"
numpy = "^1.24.3"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
dash-html-components = "^2.0.0"
dash-core-components = "^2.0.0"
gunicorn = "^20.1.0"
setuptools = "^67.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
